# trying_basic_space_shooter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
src/: camera.cpp  irender_object.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  model_render_object.cpp  model_render_object.hpp  renderer.cpp  renderer.hpp  screen_renderer.cpp  screen_renderer.hpp  shader.cpp  spatial_render_object.cpp  spatial_render_object.hpp
src/classes/: asteroid.cpp  camera.cpp  crosshair.cpp  input.cpp  light_source.cpp  mesh.cpp  model.cpp  model_render_object.cpp  particle_effect.cpp  renderer.cpp  screen_renderer.cpp  shader.cpp  spaceship.cpp  spatial_render_object.cpp  static_utils.cpp  target.cpp  timed_effect.cpp
src/headers/: asteroid.hpp  camera.hpp  crosshair.hpp  input.hpp  light_source.hpp  mesh.hpp  model.hpp  model_render_object.hpp  particle_effect.hpp  renderer.hpp  screen_renderer.hpp  shader.hpp  spaceship.hpp  spatial_render_object.hpp  static_utils.hpp  target.hpp  timed_effect.hpp
src/models/asteroid/: asteroid.gltf
src/models/laser/: laser.gltf
src/models/spaceship/: basic_spaceship.gltf
src/shaders/: ambientLightDeferred.fs  ambientLightDeferred.vs  crosshair.fs  crosshair.vs  debris.fs  debris.vs  laserBeam.fs  laserBeam.vs  modelLoading.fs  modelLoading.vs  pointLight.fs  pointLight.vs  screen.fs  toneMapper.fs
